updated the index.html

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -69,7 +69,53 @@
 		</div>
 	</div>
 </div>
+  <!--Footer-->
+  <div style="background-color:wheat;">
+  <footer class="page-footer text-center font-small mt-4 wow fadeIn">
 
+    
+
+    <hr class="my-4">
+
+
+    <!--Copyright-->
+    <div class="footer-copyright py-3">
+      © 2021 Copyright:
+	  <a href="#" target="_blank"> Khalid Ali </a>
+	  <h3><strong>SHOP AT THE BEST PLACE IN TOWN!!</strong></h3>
+    </div>
+	<!--/.Copyright-->
+	
+</style>
+<body>
+
+<h2>khalid-shop Newsletter</h2>
+
+<form action="/action_page.php">
+  <div class="container">
+    <h2>Subscribe to our Newsletter</h2>
+  </div>
+
+  <div class="container" style="background-color:bisque">
+	<input type="text" placeholder="Name" name="name" required>
+	<br>
+	<br>
+	<input type="text" placeholder="Email address" name="mail" required>
+	<br>
+    <label>
+      <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+    </label>
+  </div>
+
+  <div class="container">
+    <input type="submit" value="Subscribe">
+  </div>
+</form>
+
+
+  </footer>
+  </div>
+  <!--/.Footer-->
 
 
 {% endblock %}
