--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -51,7 +51,7 @@
 
       <ul class=" navbar-nav my-2 my-lg-0">
         <li class="nav-item ">
-          <a class="nav-link" href="/costumer-uploads">Costumer-uploads
+          <a class="nav-link" href="/upload">Costumer-uploads
             </li>
             
 
