updated the index.html

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -72,38 +72,25 @@
   <!--Footer-->
   <div style="background-color:wheat;">
   <footer class="page-footer text-center font-small mt-4 wow fadeIn">
-
-    
-
-    <hr class="my-4">
-
-
-    <!--Copyright-->
-    <div class="footer-copyright py-3">
-      © 2021 Copyright:
-	  <a href="#" target="_blank"> Khalid Ali </a>
-	  <h3><strong>SHOP AT THE BEST PLACE IN TOWN!!</strong></h3>
-    </div>
-	<!--/.Copyright-->
 	
 </style>
 <body>
 
-<h2>khalid-shop Newsletter</h2>
+<h2><strong>khalid-Eshop Newsletter</strong></h2>
 
 <form action="/action_page.php">
   <div class="container">
     <h2>Subscribe to our Newsletter</h2>
   </div>
 
-  <div class="container" style="background-color:bisque">
-	<input type="text" placeholder="Name" name="name" required>
+  <div class="container" style="background-color:wheat">
+	<input type="text" placeholder="Name(Khalid)" name="name" required>
 	<br>
 	<br>
-	<input type="text" placeholder="Email address" name="mail" required>
+	<input type="text" placeholder="Email address(lanrakhaled@gmail.com)" name="mail" required>
 	<br>
     <label>
-      <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+      <input type="checkbox" checked="checked" name="subscribe"> <strong>Daily Newsletter</strong>
     </label>
   </div>
 
@@ -111,6 +98,16 @@
     <input type="submit" value="Subscribe">
   </div>
 </form>
+
+
+
+    <!--Copyright-->
+    <div class="footer-copyright py-3">
+		<h3><strong>SHOP AT THE BEST PLACE IN TOWN!!</strong></h3>
+      © 2021 Copyright:
+	  <a href="#" target="_blank"> Khalid Ali </a>
+    </div>
+	<!--/.Copyright-->
 
 
   </footer>
