--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -44,7 +44,7 @@
 </div>
 <!-- modal -->
   <!-- Modal -->
-  <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -74,5 +74,5 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div> 
 {% endblock %}
